--- a/loginsignupsys.html
+++ b/loginsignupsys.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lucide/0.263.1/lucide.min.js"></script>
     
     <!-- Link to your external CSS file -->
-    <link rel="stylesheet" href="styl1e.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="auth-container">
