--- a/index.html
+++ b/index.html
@@ -1048,7 +1048,7 @@
                     <input type="email" id="senderEmail" placeholder="Your Email Address *" class="form-input full-width" required>
                     <input type="tel" id="senderPhone" placeholder="Your Phone (optional)" class="form-input full-width">
                 </div>
-                <textarea id="senderBio" rows="2" placeholder="Brief professional background (optional) - e.g., 'I've been helping SaaS companies scale their sales processes for 5+ years...'" class="form-input"></textarea>
+                <textarea id="senderBio" rows="2" placeholder="Brief professional background (optional)" class="form-input"></textarea>
                 <small>* Required fields. This information will be used to personalize your outreach emails.</small>
             </div>
 
