--- a/index.html
+++ b/index.html
@@ -1158,7 +1158,7 @@
             
             <div class="space-y-3">
                 <p class="tagline">Your AI-Powered Outreach Engine</p>
-                <p class="description">Transform your cold outreach with personalized emails using Advanced AI</p>
+                <p class="description">Transform your cold outreach with Advanced AI</p>
             </div>
         </div>
 
