--- a/campaigns.html
+++ b/campaigns.html
@@ -255,7 +255,15 @@
         import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-auth.js";
         import { getFirestore, collection, getDocs, addDoc, doc, setDoc, getDoc, query, orderBy } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-firestore.js";
 
-        const firebaseConfig = { /* PASTE YOUR CONFIG OBJECT HERE */ };
+        const firebaseConfig = {
+            apiKey: "AIzaSyDmWNfHVuzEZariM7hPunt3zXeEXKSBlk0",
+    authDomain: "project01-6dc41.firebaseapp.com",
+    projectId: "project01-6dc41",
+    storageBucket: "project01-6dc41.firebasestorage.app",
+    messagingSenderId: "714586325510",
+    appId: "1:714586325510:web:8d57e4654877ff298b7987",
+    measurementId: "G-0BM2TWETQW"
+        };
         
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
