--- a/campaigns.html
+++ b/campaigns.html
@@ -256,7 +256,7 @@
         import { getFirestore, collection, getDocs, addDoc, doc, setDoc, getDoc, query, orderBy } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-firestore.js";
 
         const firebaseConfig = {
-            apiKey: "AIzaSyDmWNfHVuzEZariM7hPunt3zXeEXKSBlk0",
+            apiKey: FIREBASE_APIKEY,
     authDomain: "project01-6dc41.firebaseapp.com",
     projectId: "project01-6dc41",
     storageBucket: "project01-6dc41.firebasestorage.app",
