--- a/generation.html
+++ b/generation.html
@@ -107,7 +107,7 @@
         import { GoogleGenerativeAI } from "https://cdn.jsdelivr.net/npm/@google/generative-ai@0.1.0/dist/index.mjs";
 
         // IMPORTANT: Paste your keys and config here
-        const GEMINI_API_KEY = process.env.GEMINI_API_KEY || "YOUR_GEMINI_API_KEY";
+        const GEMINI_API_KEY = "AIzaSyAMIen9b701UekKNPVEuICV42kFZmhoUs4";
         const firebaseConfig = {
             apiKey: "AIzaSyDmWNfHVuzEZariM7hPunt3zXeEXKSBlk0",
             authDomain: "project01-6dc41.firebaseapp.com",
